--- a/src/index.html
+++ b/src/index.html
@@ -3,9 +3,10 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Express Static Page</title>
+  <title>Express Static Files</title>
 </head>
 <body>
-  <h1>Welcome to the Static Page served by Express</h1>
+  <h1>Welcome to the Express Application with Static Files!</h1>
+  <!-- Webpack will inject the bundled JS file here -->
 </body>
 </html>
